tests/ui/ferrocene/compiler-arguments/error-format/error-format_short.rs
//@ check-fail
//@ compile-flags: --error-format short
//~? RAW cannot find value `x` in this scope

fn main() {
    let x = x;
}

// ferrocene-annotations: um_rustc_error_format
